--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -4507,3 +4507,789 @@ strictMode() // 将报错
 
 ---
 
+
+
+---
+
+## 2.3 请问Cookie和Session的机制是什么？两者有什么区别？
+
+cookie 机制是通过检查客户身上的“通行证”来确定客户身份，session 机制就是通过检查服务器上的“客户明细表”来确认客户身份。session 可理解为在服务器上建立一份客户档案，客户来访的时候只需要查询客户档案表是否有该客户，**session 是基于 cookie 实现的**
+
+cookie 和 session 的区别：
+
+存储位置： cookie 存在于客户端，临时文件夹中；session 存在于服务器的内存中，一个 session 域对象为一个用户浏览器服务
+
+安全性： cookie 是以明文的方式存放在客户端的，安全性低，可以通过一个加密算法进行加密后存放；session 存放于服务器的内存中，所以安全性好
+
+**生命周期**(以 20 分钟为例) ：cookie 的生命周期是累计的，从创建时，就开始计时，20 分钟后 cookie 生命周期结束； session 的生命周期是间隔的，从创建时，开始计时，在 20 分钟内，没有访问 session，那 session 生命周期被销毁。如在 20 分钟内（如在第 19 分钟时）访问过 session，那将重新计算 session 的生命周期。关机会造成 session 生命周期的结束，但是对 cookie 没有影响
+
+**访问范围**： cookie 为多个用户浏览器共享；session 为一个用户浏览器独享
+
+---
+
+## 2.4 请问GET请求和POST请求区别？
+
+参数传递：GET 参数通过 url 传递，POST 放在 body 中（http 协议规定，url 在请求头中，所以大小限制很小）
+
+长度限制：GET 请求在 url 中传递的参数是有长度限制的，POST 没有
+
+参数类型：对参数的数据类型，GET 只接受 ASCII字符（发起之前需要进行 UrlEncoding），而 POST 没有限制
+
+回退影响：GET 在浏览器回退时是无害的，POST 会再次提交请求
+
+安全性：GET 比 POST 不安全，参数直接暴露在 url 中，不能用来传递敏感信息
+
+请求过程：GET 产生一个 TCP 数据包；POST 产生两个 TCP 数据包（大多数浏览器）。对于 GET 请求，浏览器会把 http 的 header 和 data 一并发送出去，服务器响应200（返回数据）；而 POST请求，浏览器先发送 header，服务器响应100 continue，浏览器再发送 data，服务器响应200 ok（返回数据）
+
+-----
+
+## 2.5 请问HTTP状态码有哪些分类，你了解哪些状态码？
+
+| **类别** | **原因短语**                 |                                    |
+| -------- | ---------------------------- | ---------------------------------- |
+| 1XX      | Informational（信息性状态码) | 接受的请求正在处理                 |
+| 2XX      | Success（成功状态码）        | 请求正常处理完毕                   |
+| 3XX      | Redirection（重定向）        | 需要进行附加操作以完成请求         |
+| 4XX      | Client error（客户端错误）   | 客户端请求出错，服务器无法处理请求 |
+| 5XX      | Server Error（服务器错误）   | 服务器处理请求出错                 |
+
+常见HTTP 状态码：
+
+**1xx（请求状态）：**
+
+100 ： 继续，请求者应当继续提出请求。服务器返回此代码表示已收到请求的第一部分，正在等待其余部分
+
+101 ：切换协议，请求者已要求服务器切换协议，服务器已确认并准备切换
+
+**2xx（成功）：**
+
+200：成功，服务器已经成功处理了请求
+
+201：已创建，请求成功并且服务器创建了新的资源
+
+202：已接受，服务器已接受请求，但尚未处理
+
+203：非授权信息，服务器已经成功处理了请求，但返回的信息可能来自另一来源
+
+204：无内容，服务器成功处理了请求，但没有返回任何内容
+
+205：重置内容，服务器成功处理了请求，但没有返回任何内容
+
+206：部分内容，服务器成功处理了部分GET请求
+
+**3xx（重定向）：**
+
+300：多种选择，针对请求，服务器可执行多种操作。服务器可根据请求者（user agent）选择一项操作，或提供操作列表供请求者选择
+
+301：永久移动，请求的网页已永久移动到新位置。服务器返回此响应（对GET或HEAD请求的响应）时，会自动将请求者转到新位置
+
+302：临时移动，服务器目前从不同位置的网页响应请求，但请求者应继续使用原有位置来进行以后的请求
+
+303：查看其它位置，请求者应当对不同的位置使用单独的GET请求来检索响应时，服务器返回此代码
+
+304：未修改，自上次请求后，请求的网页未修改过。服务器返回此响应，不会返回网页的内容
+
+305：使用代理，请求者只能使用代理访问请求的网页。如果服务器返回此响应，还表示请求者应使用代理
+
+307：临时性重定向，服务器目前从不同位置的网页响应请求，但请求者应继续使用原有的位置来进行以后的请求
+
+**4xx（客户端请求错误）：**
+
+400：错误请求，服务器不理解请求的语法
+
+401：未授权，请求要求身份验证。对于需要登录的网页，服务器可能返回此响应
+
+403：禁止，服务器拒绝请求
+
+404：未找到，服务器找不到请求的网页
+
+405：方法禁用，禁用请求中指定的方法
+
+406：不接受，无法使用请求的内容特性响应请求的网页
+
+407：需要代理授权，此状态码与401（未授权）类似，但指定请求者应当授权使用代理
+
+408：请求超时，服务器等候请求时发生超时
+
+409：冲突，服务器在完成请求时发生冲突。服务器必须在响应中包含有关冲突的信息
+
+410：已删除，如果请求的资源已永久删除，服务器就会返回此响应
+
+411：需要有效长度，服务器不接受不含有效内容长度标头字段的请求
+
+412：未满足前提条件，服务器未满足请求者在请求者设置的其中一个前提条件
+
+413：请求实体过大，服务器无法处理请求，因为请求实体过大，超出了服务器的处理能力
+
+414：请求的URI过长，请求的URI（通常为网址）过长，服务器无法处理
+
+415：不支持媒体类型，请求的格式不受请求页面的支持
+
+416：请求范围不符合要求，如果页面无法提供请求的范围，则服务器会返回此状态码
+
+417：未满足期望值，服务器未满足“期望”请求标头字段的要求
+
+**5xx（服务器错误）：**
+
+500：服务器内部错误，服务器遇到错误，无法完成请求
+
+501：尚未实施，服务器不具备完成请求的功能。例如，服务器无法识别请求方法时可能会返回此代码
+
+502：错误网关，服务器作为网关或代理，从上游服务器无法收到无效响应
+
+503：服务器不可用，服务器目前无法使用（由于超载或者停机维护）。通常，这只是暂时状态
+
+504：网关超时，服务器作为网关代理，但是没有及时从上游服务器收到请求
+
+505：HTTP版本不受支持，服务器不支持请求中所用的HTTP协议版本
+
+-----
+
+## 3.1 请谈谈你对浏览器的理解？
+
+浏览器的主要功能是将用户选择的 web 资源呈现出来，它需要从服务器请求资源，并将其显示在浏览器窗口中，资源的格式通常是 HTML，也包括 PDF、image 及其他格式
+
+HTML 和 CSS 规范中规定了浏览器解释 html 文档的方式，由 W3C 组织对这些规范进行维护，但各浏览器厂商纷纷开发自己的扩展功能，对规范遵循并不完善，这便导致了严重的兼容性问题
+
+简单来说浏览器可以分为两部分，shell 和 内核。其中 shell 的种类相对比较多，内核则比较少
+
+**shell** 是指**浏览器外壳**：例如菜单，工具栏等，主要是提供给用户界面操作，参数设置，是调用内核来实现各种功能的
+
+**内核** 是**浏览器的核心**，是基于标记语言显示内容的程序或模块
+
+---
+
+## 3.2 请谈谈你对浏览器内核的理解？
+
+浏览器内核主要分成两部分：
+
+**渲染引擎：**其职责就是渲染，即在浏览器窗口中显示所请求的内容。默认情况下，渲染引擎可以显示 html、xml 文档及图片，它也可以借助插件显示其他类型数据，例如使用 PDF 阅读器插件显示 PDF 格式
+
+**JS 引擎：**解析和执行 javascript 来实现网页的动态效果
+
+起初渲染引擎和 JS 引擎区分并不明确，而后 JS 引擎越来越独立，内核就倾向于只指渲染引擎
+
+**目前常见的浏览器内核：**
+
+**IE 浏览器：**Trident 内核，也俗称 IE 内核
+
+**Chrome 浏览器：**统称为 Chromium 内核或 Chrome 内核，以前是 Webkit 内核，现在是 Blink内核
+
+F**irefox 浏览器：**Gecko 内核，俗称 Firefox 内核
+
+**Safari 浏览器：**Webkit 内核
+
+**Opera 浏览器：**最初是自家公司的 Presto 内核，后来从 Webkit 又转到了 Blink 内核
+
+**360浏览器、猎豹浏览器内核：**IE + Chrome 双内核
+
+**搜狗、遨游、QQ 浏览器内核：**Trident（兼容模式）+ Webkit（高速模式）
+
+---
+
+## 3.3 请问你了解ajax请求吗？
+
+传统请求方法的缺点:
+
+传统的web请求是用户触发一个http请求服务器，服务器收到后，响应到用户，并返回一个新的页面，每当服务器处理客户端请求时，客户都只能空闲等待，哪怕只是一次很小的交互，都要返回一个完整的HTML页，并且浪费时间和带宽去重新读取整个页面，这导致了用户界面的响应比本地应用慢得多
+
+ajax 是一种用于创建快速页的技术，通过在后台与服务器进行少量数据交换，可使网页实现异步更新，在不重新加载整个网页的情况下，对网页的某部分进行更新
+
+ajax请求步骤：
+
+a、创建XMLHTTPRequest对象（通过 XMLHttpRequest 可以在不刷新页面的情况下请求特定 URL，获取数据，常用于ajax请求）
+
+b、使用open方法设置和服务器的交互信息
+
+c、设置发送的数据，开始和服务器端交互
+
+d、注册事件
+
+e、更新界面
+
+---
+
+## 3.4 请问ajax是如何发请求的？
+
+get请求：
+
+```js
+//一、创建XMLHTTPRequest对象
+var ajax = new XMLHttpRequest();
+
+//二、设置请求url参数，（请求的类型，请求的url，可以带参数，动态的传递参数starName到服务端）
+ajax.open('get','getStar.php?starName='+name);
+
+//三、发送请求
+ajax.send();
+
+//四、注册事件onreadystatechange状态改变就会调用
+ajax.onreadystatechange = function () {
+    if (ajax.readyState==4 &&ajax.status==200) {
+	//五、if条件为true，数据请求成功，并且请求的页面是存在的　　　　           
+    	console.log(ajax.responseText);
+    }
+}
+```
+
+关于if判断语句中的状态值：
+
+**status：**服务器的Http状态码，若是200，则表示OK，404，表示为未找到
+
+**readyState属性**有五个状态值：
+
+0：uninitialized：未初始化，已经创建了XMLHttpRequest对象但是未初始化
+
+1：loading：已经开始准备好要发送了
+
+2：loaded,：已经发送，但是还没有收到响应
+
+3：interactive：正在接受响应，但是还没接收完
+
+4：completed：接受响应完毕
+
+**post请求：**
+
+```js
+//一、创建XMLHTTPRequest对象
+var ajax = new XMLHttpRequest();
+
+//二、设置请求的类型及url
+//post请求一定要添加请求头才行不然会报错
+ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+ajax.open('post', '02.post.php' );
+
+//三、发送请求
+ajax.send('name=fox&age=18');
+
+ajax.onreadystatechange = function () {
+// 判断服务器是否正确响应
+    if (ajax.readyState == 4 && ajax.status == 200) {
+        console.log(ajax.responseText);
+    } 
+};
+```
+
+可进行一定的封装：
+
+```js
+function ajax_method(url,data,method,success) {
+    //创建XMLHTTPRequest对象
+    var ajax = new XMLHttpRequest();
+    // get请求
+    if (method=='get') {
+        if (data) {
+            // 如果有值
+            url+='?';
+            url+=data;
+        }else{
+        }
+        // 设置请求方法以及url
+        ajax.open(method,url);
+        // 发送请求
+        ajax.send();
+    }else{
+        // post请求，url是不需要改变
+        ajax.open(method,url);
+        // 需要设置请求报文
+        ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+        // 判断data，send发送数据
+        if (data) {
+            // 如有值从send发送
+            ajax.send(data);
+        }else{
+            //直接发送
+            ajax.send();
+        }
+    }
+    // 注册事件
+    ajax.onreadystatechange = function () {
+        // 在事件中获取数据，并修改显示界面
+        if (ajax.readyState==4 && ajax.status==200) {
+            // console.log(ajax.responseText);
+            // 将数据让外面可以使用
+            // return ajax.responseText;
+            // 当onreadystatechange被调用时，证明数据请求成功
+            // ajax.responseText;
+            // 可外面传入一个 function 作为参数 success
+            success(ajax.responseText);
+        }
+    }
+}
+```
+
+Promise版本的ajax请求：
+
+```js
+var getJSON = function(url) {
+    var promise = new Promise(function(resolve, reject) {
+        var client = new XMLHttpRequest();
+        client.open("GET", url);
+        client.onreadystatechange = handler;
+        client.responseType = "json";
+        client.setRequestHeader("Accept", "application/json");
+        client.send();
+    
+        function handler() {
+            if (this.readyState !== 4) {
+                return;      
+            }
+            if (this.status === 200) {
+                resolve(this.response);      
+            } else {
+                reject(new Error(this.statusText));      
+            }    
+        };  
+    });
+    return promise;
+};  
+  
+getJSON("http://rap.taobao.org/mockjs/9768/Rap/get").then(function(response) {
+    console.log('Contents: ',response);
+}, function(error) {
+    console.error('出错了', error);
+});
+```
+
+----
+
+## 3.5 请问ajax、axios、fetch请求有何区别？
+
+- **axios**
+
+一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端，本质上也是对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范，具有以下特征：
+
+a、从浏览器中创建 XMLHttpRequest
+
+b、支持 Promise API
+
+c、客户端防止CSRF
+
+d、提供了一些并发请求的接口（实际开发中方便了很多的操作）
+
+e、从 node.js 创建 http 请求
+
+f、拦截请求和响应
+
+g、转换请求和响应数据
+
+h、支持取消请求
+
+i、自动转换JSON数据
+
+- **fetch**
+
+号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，fetch代码结构更加简单，参数类型与ajax类似，但fetch不是ajax的进一步封装，而是原生js，没有使用XMLHttpRequest对象
+
+**fetch优点：**
+
+a、符合关注分离，没有将输入、输出和用事件来跟踪的状态混杂在一个对象里
+
+b、写法更加简洁方便
+
+---
+
+# 计算机网络
+
+---
+
+## 1.1 请问你了解OSI七层模型吗？
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633686837830/D6A70DA7466DF3865BABC8FDAA316E4C)
+
+- **应用层**
+
+​    OSI参考模型中最靠近用户的一层，是为计算机用户提供应用接口，也为用户直接提供各种网络服务。我们常见应用层的网络服务协议有：HTTP，HTTPS，FTP，POP3、SMTP等。
+
+- **表示层**
+
+​    表示层提供各种用于应用层数据的编码和转换功能,确保一个系统的应用层发送的数据能被另一个系统的应用层识别。如果必要，该层可提供一种标准表示形式，用于将计算机内部的多种数据格式转换成通信中采用的标准表示形式。数据压缩和加密也是表示层可提供的转换功能之一。
+
+- **会话层**
+
+​    会话层就是负责建立、管理和终止表示层实体之间的通信会话。该层的通信由不同设备中的应用程序之间的服务请求和响应组成。
+
+- **传输层**
+
+​    传输层建立了主机端到端的链接，传输层的作用是为上层协议提供端到端的可靠和透明的数据传输服务，包括处理差错控制和流量控制等问题。该层向高层屏蔽了下层数据通信的细节，使高层用户看到的只是在两个传输实体间的一条主机到主机的、可由用户控制和设定的、可靠的数据通路。我们通常说的，TCP UDP就是在这一层。端口号既是这里的“端”。
+
+- **网络层**
+
+​    本层通过IP寻址来建立两个节点之间的连接，为源端的运输层送来的分组，选择合适的路由和交换节点，正确无误地按照地址传送给目的端的运输层。就是通常说的IP层。这一层就是我们经常说的IP协议层。IP协议是Internet的基础。
+
+- **数据链路层** 
+
+​    将比特组合成字节,再将字节组合成帧,使用链路层地址 (以太网使用MAC地址)来访问介质,并进行差错检测。
+
+   数据链路层又分为2个子层：逻辑链路控制子层（LLC）和媒体访问控制子层（MAC）。
+
+​    MAC子层处理CSMA/CD算法、数据出错校验、成帧等；LLC子层定义了一些字段使上次协议能共享数据链路层。 在实际使用中，LLC子层并非必需的。
+
+- **物理层**   
+
+​    实际最终信号的传输是通过物理层实现的。通过物理介质传输比特流。规定了电平、速度和电缆针脚。常用设备有（各种物理设备）集线器、中继器、调制解调器、网线、双绞线、同轴电缆。这些都是物理层的传输介质。
+
+---
+
+## 1.2 请问你了解TCP/IP五层协议吗？它与OSI七层模型有什么关系吗？
+
+TCP/IP协议包含四个概念层，其中有三层对应于OSI模型中的相应层，TCP/IP协议族并不包含物理层和数据链路层，因此它不能独立完成整个计算机网络系统的功能，必须与许多其他的协议协同工作。
+
+- **网络接口层**
+
+用于协作IP数据在已有网络介质上传输的协议。实际上TCP/IP标准并不定义与ISO数据链路层和物理层相对应的功能。相反，它定义像地址解析协议(Address Resolution Protocol,ARP)这样的协议，提供TCP/IP协议的数据结构和实际物理硬件之间的接口。
+
+- **网络层**
+
+对应于OSI七层模型的网络层。本层包含IP协议、RIP协议(Routing Information Protocol，路由信息协议)，负责数据的包装、寻址和路由。同时还包含网间控制报文协议(Internet Control Message Protocol,ICMP)用来提供网络诊断信息。
+
+- **传输层**
+
+对应于OSI七层模型的传输层，它提供两种端到端的通信服务。其中TCP协议(Transmission Control Protocol)提供可靠的数据流运输服务，UDP协议(Use Datagram Protocol)提供不可靠的用户数据报服务。
+
+- **应用层**
+
+对应于OSI七层模型的应用层、表达层与会话层。因特网的应用层协议包括Finger、Whois、FTP(文件传输协议)、Gopher、HTTP(超文本传输协议)、Telent(远程终端协议)、SMTP(简单邮件传送协议)、IRC(因特网中继会话)、NNTP（网络新闻传输协议）等。
+
+TCP/IP五层协议与OSI的七层模型对应关系如下：
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633686981137/E3C7704B2554F5FA5553E2FF7A4E7F55)
+
+----
+
+## 1.3 请问你能阐述下TCP与UDP的区别吗？
+
+TCP和UDP是OSI模型中的运输层中的协议。TCP提供可靠的通信传输，而UDP则常被用于让广播和细节控制交给应用的通信传输。
+
+TCP：
+
+充分实现了数据传输时各种控制功能，可以进行丢包的重发控制，还可以对次序乱掉的分包进行顺序控制。而这些在UDP都没有。此外，TCP作为一种面向有连接的协议，只有在确认通信对端存在时才会发送数据，从而可以控制通信流量的浪费。
+
+TCP通过检验和、序列号、确认应答、重发控制、连接管理以及窗口控制等机制实现可靠性传输。
+
+UDP：
+
+不提供复杂的控制机制，利用IP提供面向无连接的通信服务。并且它是将应用程序发来的数据在收到的那一刻，立刻按照原样发送到网络上的一种机制。
+
+即使是出现网络拥堵的情况下，UDP也无法进行流量控制等避免网络拥塞的行为。此外，传输途中如果出现了丢包，UDO也不负责重发。
+
+TCP与UDP区别：
+
+1、TCP面向连接（如打电话要先拨号建立连接），UDP是无连接的，即发送数据之前不需要建立连接
+
+2、TCP提供可靠的服务。通过TCP连接传送的数据，无差错，不丢失，不重复，且按序到达，UDP尽最大努力交付，即不保证可靠交付
+
+3、TCP面向字节流，实际上是TCP把数据看成一连串无结构的字节流；UDP是面向报文的，UDP没有拥塞控制，因此网络出现拥塞不会使源主机的发送速率降低（对实时应用很有用，如IP电话，实时视频会议等）
+
+4、每一条TCP连接只能是点到点的；UDP支持一对一，一对多，多对一和多对多的交互通信
+
+5、TCP首部开销20字节；UDP的首部开销小，只有8个字节
+
+6、TCP的逻辑通信信道是全双工的可靠信道，UDP则是不可靠信道
+
+---
+
+## 1.4 请问你能阐述下TCP三次握手与四次挥手的过程吗？
+
+TCP的三次握手与四次挥手的过程可参考以下图例加以理解：
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633687013651/32F84793188E87383042FB2218BE6D50)
+
+TCP三次握手：
+
+1、客户端发送SYN包来建立连接。包信息: [SYN=1,ACK=0] Seq=1000(随机生成的初始序号client_isn,目前假设1000)；Len=0；MSS=1460(通常情况下是1460)；
+
+2、服务端收到包之后，提取SYN的报文信息，然后分配TCP缓存和变量，发送允许连接的报文段。包信息 [SYN=1,ACK=1] Seq=666(随机生成的初始序号server_isn,目前假设535);Ack=1000(上一个包的Seq)+1;Len=0;MSS=1200(这个不是固定的，根据当前窗口来判断能接受的最大报文段长度)在第三次握手之前分配缓存容易收到SYN洪泛的拒绝服务攻击
+
+3、客户端接受到服务端的确认包之后，发送确认包[ACK=1,SYN=0] Seq=1001(上一个包的Ack), Ack=666(上一个包的Seq)+1;之后就可以正常通信了。前两次不能有效负载，第三次就可以携带客户数据了，后面在通信的时候标志位都将置为0
+
+TCP四次挥手：
+
+1、客户端给服务器发送TCP包，用来关闭客户端到服务器的数据传送。将标志位FIN\=1 表示请求断开连接，同时把Seq = u
+
+2、服务器收到FIN后,先检验Ack \=u+1，发回一个ACK = 1(标志位ACK=1)表示确认断开连接请求，同时把Seq = v ,服务器开始断开工作
+
+3、服务器断开工作完成，发送一个FIN \= 1请求断开连接，ACK=1 (标志位ACK=1)表示确认断开连接请求, 同时把Seq =w
+
+4、客户端收到服务器发送的FIN\=1之后，发回ACK=1(标志位ACK=1)确认关闭请求，同时把Ack= w+1 服务器在检验Ack\= 服务器Seq+1之后关闭连接，客户端在等待2msl时间后关闭连接
+
+注意：为什么建立连接只要三次握手，但是断开连接要四次挥手？
+
+因为三次握手的第二次由服务器发送SYN建立连接的信息和ACK确认建立连接的信息是在同一个报文中传输的，而四次挥手的由服务器发送的ACK 确认断开请求的信息和FIN 发送断开连接的信息是在两个报文中传输的
+
+---
+
+## 1.5 请问在浏览器中输入[www.baidu.com](http://www.baidu.com/)后执行了哪些过程？
+
+- 客户端浏览器通过DNS解析到[www.baidu.com](http://www.baidu.com/)的IP地址220.181.27.48，通过这个IP地址找到客户端到服务器的路径。客户端浏览器发起一个HTTP会话到220.161.27.48，然后通过TCP进行封装数据包，输入到网络层。
+- 在客户端的传输层，把HTTP会话请求分成报文段，添加源和目的端口，如服务器使用80端口监听客户端的请求，客户端由系统随机选择一个端口如5000，与服务器进行交换，服务器把相应的请求返回给客户端的5000端口。然后使用IP层的IP地址查找目的端。
+- 客户端的网络层不用关系应用层或者传输层的东西，主要做的是通过查找路由表确定如何到达服务器，期间可能经过多个路由器，这些都是由路由器来完成的工作，我不作过多的描述，无非就是通过查找路由表决定通过那个路径到达服务器。
+- 客户端的链路层，包通过链路层发送到路由器，通过邻居协议查找给定IP地址的MAC地址，然后发送ARP请求查找目的地址，如果得到回应后就可以使用ARP的请求应答交换的IP数据包现在就可以传输了，然后发送IP数据包到达服务器的地址。
+
+---
+
+## 1.6 请问TCP如何保证数据的可靠传输的呢？
+
+TCP提供一种面向连接的、可靠的字节流服务。其中，面向连接意味着两个使用TCP的应用（通常是一个客户和一个服务器）在彼此交换数据之前必须先建立一个TCP连接。在一个TCP连接中，仅有两方进行彼此通信；而字节流服务意味着两个应用程序通过TCP链接交换8bit字节构成的字节流，TCP不在字节流中插入记录标识符。
+
+TCP通过以下方式保证数据传输的可靠性：
+
+**数据包校验**：目的是检测数据在传输过程中的任何变化，若校验出包有错，则丢弃报文段并且不给出响应，这时TCP发送数据端超时后会重发数据
+
+**对失序数据包重排序**：既然TCP报文段作为IP数据报来传输，而IP数据报的到达可能会失序，因此TCP报文段的到达也可能会失序。TCP将对失序数据进行重新排序，然后才交给应用层
+
+**丢弃重复数据**：对于重复数据，能够丢弃重复数据
+
+**应答机制**：当TCP收到发自TCP连接另一端的数据，它将发送一个确认。这个确认不是立即发送，通常将推迟几分之一秒
+
+**超时重发**：当TCP发出一个段后，它启动一个定时器，等待目的端确认收到这个报文段。如果不能及时收到一个确认，将重发这个报文段
+
+**流量控制**：TCP连接的每一方都有固定大小的缓冲空间。TCP的接收端只允许另一端发送接收端缓冲区所能接纳的数据，这可以防止较快主机致使较慢主机的缓冲区溢出，这就是流量控制。TCP使用的流量控制协议是可变大小的滑动窗口协议
+
+----
+
+## 1.7 请问TCP如何拥塞控制呢？
+
+防止过多的数据注入到网络中，这样可以使网络中的路由器或链路不致过载。拥塞控制所要做的都有一个前提：网络能够承受现有的网络负荷。拥塞控制是一个全局性的过程，涉及到所有的主机、路由器，以及与降低网络传输性能有关的所有因素。
+
+拥塞控制代价：需要获得网络内部流量分布的信息。在实施拥塞控制之前，还需要在结点之间交换信息和各种命令，以便选择控制的策略和实施控制。这样就产生了额外的开销。拥塞控制还需要将一些资源分配给各个用户单独使用，使得网络资源不能更好地实现共享。
+
+几种常见拥塞控制方法：
+
+慢开始(slow-start )、拥塞避免(congestion avoidance )、快重传( fastretransmit )和快恢复( fastrecovery )。
+
+---
+
+## 2.1 请问你了解超文本传送协议HTTP吗？
+
+HTTP是一个属于应用层的面向对象的协议，由于其简捷、快速的方式，适用于分布式超媒体信息系统。HTTP协议的主要特点可概括如下：
+
+- 支持客户/服务器模式。
+- 简单快速：客户向服务器请求服务时，只需传送请求方法和路径。请求方法常用的有GET、HEAD、POST。每种方法规定了客户与服务器联系的类型不同。由于HTTP协议简单，使得HTTP服务器的程序规模小，因而通信速度很快。
+- 灵活：HTTP允许传输任意类型的数据对象。正在传输的类型由Content-Type加以标记。
+- 无连接：无连接的含义是限制每次连接只处理一个请求。服务器处理完客户的请求，并收到客户的应答后，即断开连接。采用这种方式可以节省传输时间。
+- 无状态：HTTP协议是无状态协议。无状态是指协议对于事务处理没有记忆能力。缺少状态意味着如果后续处理需要前面的信息，则它必须重传，这样可能导致每次连接传送的数据量增大。另一方面，在服务器不需要先前信息时它的应答就较快。
+
+---
+
+## 2.2 请问HTTP和HTTPS两者有哪些区别？
+
+HTTP协议是超文本传输协议，HTTPS是安全的超文本传输协议，是安全版的HTTP协议，使用安全套接字层(SSL)进行信息交换，
+
+HTTPS协议主要针对解决HTTP协议以下不足：
+
+1、通信使用明文（不加密），内容可能会被窃听
+
+  2、不验证通信方身份，应此可能遭遇伪装
+
+3、无法证明报文的完整性（即准确性），所以可能已遭篡改
+
+  HTTP+加密+认证+完整性保护=HTTPS，HTTP端口 80， HTTPS端口**443**
+
+  HTTPS采用对称加密、SSL位于应用层于传输层TCP之间，原本数据由应用层直接交由传输层处理，现在会经过SSL加密再进行传输。
+
+注意：HTTPS也不是绝对安全的，针对SSL的中间人攻击方式主要有两类，分别是SSL劫持攻击和SSL剥离攻击。
+
+SSL劫持攻击就是 SSL证书欺骗攻击，将自己接入到客户端和目标网站之间； 在传输过程中伪造服务器的证书，将服务器的公钥替换成自己的公钥。
+
+---
+
+## 2.3 请问对称加密与非对称加密有什么区别？
+
+对称密钥加密是指加密和解密使用同一个密钥的方式，这种方式存在的最大问题就是密钥发送问题，即如何安全地将密钥发给对方；
+
+而非对称加密是指使用一对非对称密钥，即公钥和私钥，公钥可以随意发布，但私钥只有自己知道。发送密文的一方使用对方的公钥进行加密处理，对方接收到加密信息后，使用自己的私钥进行解密。
+
+由于非对称加密的方式不需要发送用来解密的私钥，所以可以保证安全性；但是和对称加密比起来，它非常的慢**，所以我们还是要用对称加密来传送消息，但对称加密所使用的密钥我们可以通过非对称加密的方式发送出去。**
+
+---
+
+## 2.4请问HTTP的请求和响应由哪几个部分组成？
+
+- HTTP请求信息由3部分组成：
+
+1、请求方法（GET/POST）、URI、协议/版本
+
+2、请求头(Request Header)：Content-Type、端口号Host、Cookie
+
+3、请求正文：包含客户提交的查询字符串信息，请求头和请求正文之间是一个空行
+
+- HTTP响应也由3个部分构成：
+
+1、状态行：状态代码及描述 如404、500等
+
+2、响应头(Response Header)：Content-Type 、Server、Date
+
+3、响应正文：html代码
+
+----
+
+## 2.5 请问IP地址分为哪几类？
+
+IP地址是指互联网协议地址，是IP协议提供的一种统一的地址格式，它为互联网上的每一个网络和每一台主机分配一个逻辑地址，以此来屏蔽物理地址的差异。IP地址编址方案将IP地址空间划分为A、B、C、D、E五类，其中A、B、C是基本类，D、E类作为多播和保留使用，为特殊地址。
+
+每个IP地址包括两个标识码（ID），即网络ID和主机ID。同一个物理网络上的所有主机都使用同一个网络ID，网络上的一个主机（包括网络上工作站，服务器和路由器等）有一个主机ID与其对应。A~E类地址的特点如下：
+
+**A类地址：**以0开头，第一个字节范围：0~127；
+
+**B类地址：**以10开头，第一个字节范围：128~191；
+
+**C类地址：**以110开头，第一个字节范围：192~223；
+
+**D类地址：**以1110开头，第一个字节范围为224~239；
+
+**E类地址：**以1111开头，保留地址
+
+**（1）、A类地址：1字节的网络地址 + 3字节主机地址，网络地址的最高位必须是“0”**
+
+一个A类IP地址是指， 在IP地址的四段号码中，第一段号码为网络号码，剩下的三段号码为本地计算机的号码。如果用二进制表示IP地址的话，A类IP地址就由1字节的网络地址和3字节主机地址组成，网络地址的最高位必须是“0”。A类IP地址中网络的标识长度为8位，主机标识的长度为24位，A类网络地址数量较少，有126个网络，每个网络可以容纳主机数达1600多万台。
+
+A类IP地址的地址范围1.0.0.0到127.255.255.255（二进制表示为：00000001 00000000 00000000 00000000 - 01111110 11111111 11111111 11111111），最后一个是广播地址。A类IP地址的子网掩码为255.0.0.0，每个网络支持的最大主机数为256的3次方-2=16777214台。
+
+**（2）、B类地址: 2字节的网络地址 + 2字节主机地址，网络地址的最高位必须是“10”**
+
+一个B类IP地址是指，在IP地址的四段号码中，前两段号码为网络号码。如果用二进制表示IP地址的话，B类IP地址就由2字节的网络地址和2字节主机地址组成，网络地址的最高位必须是“10”。B类IP地址中网络的标识长度为16位，主机标识的长度为16位，B类网络地址适用于中等规模的网络，有16384个网络，每个网络所能容纳的计算机数为6万多台。
+
+B类IP地址地址范围128.0.0.0-191.255.255.255（二进制表示为：10000000 00000000 00000000 00000000—-10111111 11111111 11111111 11111111），最后一个是广播地址。B类IP地址的子网掩码为255.255.0.0，每个网络支持的最大主机数为256的2次方-2=65534台。
+
+**（3）、C类地址: 3字节的网络地址 + 1字节主机地址，网络地址的最高位必须是“110”**
+
+一个C类IP地址是指，在IP地址的四段号码中，前三段号码为网络号码，剩下的一段号码为本地计算机的号码。如果用二进制表示IP地址的话，C类IP地址就由3字节的网络地址和1字节主机地址组成，网络地址的最高位必须是“110”。C类IP地址中网络的标识长度为24位，主机标识的长度为8位，C类网络地址数量较多，有209万余个网络。适用于小规模的局域网络，每个网络最多只能包含254台计算机。
+
+C类IP地址范围192.0.0.0-223.255.255.255（二进制表示为: 11000000 00000000 00000000 00000000 - 11011111 11111111 11111111 11111111）。C类IP地址的子网掩码为255.255.255.0，每个网络支持的最大主机数为256-2=254台。
+
+**（4）、D类地址:多播地址，用于1对多通信，最高位必须是“1110”**
+
+D类IP地址在历史上被叫做多播地址(multicast address)，即组播地址。在以太网中，多播地址命名了一组应该在这个网络中应用接收到一个分组的站点。多播地址的最高位必须是“1110”，范围从224.0.0.0到239.255.255.255。
+
+**（5）、E类地址:为保留地址，最高位必须是“1111”**
+
+----
+
+## 2.6 请简介ARP的工作原理。
+
+ARP是地址解析协议，其工作原理为：
+
+（1）、首先，每个主机都会在自己的ARP缓冲区中建立一个ARP列表，以表示IP地址和MAC地址之间的对应关系；
+
+（2）、当源主机要发送数据时，首先检查ARP列表中是否有对应IP地址的目的主机的MAC地址，如果有，则直接发送数据，如果没有，就向本网段的所有主机发送ARP数据包，该数据包包括的内容有：源主机IP地址，源主机MAC地址，目的主机的IP地址；
+
+（3）、当本网络的所有主机收到该ARP数据包时，首先检查数据包中的IP地址是否是自己的IP地址，如果不是，则忽略该数据包，如果是，则首先从数据包中取出源主机的IP和MAC地址写入到ARP列表中，如果已经存在，则覆盖，然后将自己的MAC地址写入ARP响应包中，告诉源主机自己是它想要找的MAC地址；
+
+（4）、源主机收到ARP响应包后。将目的主机的IP和MAC地址写入ARP列表，并利用此信息发送数据。如果源主机一直没有收到ARP响应数据包，表示ARP查询失败。
+
+---
+
+# 网络攻防
+
+----
+
+## 3.1 请问什么是SQL注入攻击？
+
+SQL注入，就是通过把SQL命令插入到Web表单提交或输入域名或页面请求的查询字符串，最终达到欺骗服务器执行恶意的SQL命令。
+
+一般我们提交的表单数据（未经过滤的情况下）都会拼接到 SQL 查询语句中的，就例如：
+
+```sql
+SELECT * FROM users WHERE name='aaa'
+```
+
+
+
+其中 name 的参数就是从表单中传过来的数据，如果传的参数是一条 SQL 语句，那么就可能骗过了 SQL 数据库，从而执行了一段恶意的代码，达到了攻击效果。
+
+如何防范SQL注入？
+
+- 把应用服务器的数据库权限降至最低，尽可能地减少 SQL 注入攻击带来的危害。
+- 避免网站打印出SQL错误信息，比如类型错误、字段不匹配等，把代码里的SQL语句暴露出来，以防止攻击者利用这些错误信息进行SQL注入。
+- 对进入数据库的特殊字符（'"\尖括号&*;等）进行转义处理，或编码转换。
+- 所有的查询语句建议使用数据库提供的参数化查询接口，参数化的语句使用参数而不是将用户输入变量嵌入到SQL语句中，即不要直接拼接SQL语句。
+- 在测试阶段，建议使用专门的 SQL 注入检测工具进行检测。网上有很多这方面的开源工具，例如sqlmap、SQLninja等。
+- 善用数据库操作库，有些库包可能已经做好了相关的防护，只需阅读其文档，看是否支持相应的功能即可。
+
+---
+
+## 3.2 请问什么是XXS攻击？
+
+**跨站脚本攻击**XSS （Cross Site Scripting），其重点不在于跨站点，**而在于脚本的执行**。那么XSS的原理是：
+
+恶意攻击者在web页面中会插入一些恶意的script代码。当用户浏览该页面的时候，那么嵌入到web页面中script代码会执行，因此会达到恶意攻击用户的目的。那么XSS攻击最主要有如下分类：反射型、存储型、及 DOM-based型。 反射性和DOM-baseed型可以归类为非持久性XSS攻击。存储型可以归类为持久性XSS攻击。
+
+**反射性XSS**的原理是：反射性xss一般指攻击者通过特定的方式来诱惑受害者去访问一个包含恶意代码的URL。当受害者点击恶意链接url的时候，恶意代码会直接在受害者的主机上的浏览器执行。
+
+**反射型XSS的攻击步骤如下：**
+
+\1. 攻击者在url后面的参数中加入恶意攻击代码。
+
+\2. 当用户打开带有恶意代码的URL的时候，网站服务端将恶意代码从URL中取出，拼接在html中并且返回给浏览器端。
+
+\3. 用户浏览器接收到响应后执行解析，其中的恶意代码也会被执行到。
+
+\4. 攻击者通过恶意代码来窃取到用户数据并发送到攻击者的网站。攻击者会获取到比如cookie等信息，然后使用该信息来冒充合法用户的行为，调用目标网站接口执行攻击等操作。
+
+**存储型XSS**的原理是：主要是将恶意代码上传或存储到服务器中，下次只要受害者浏览包含此恶意代码的页面就会执行恶意代码。
+
+**存储型XSS的攻击步骤如下：**
+
+\1. 攻击者将恶意代码提交到目标网站数据库中。
+
+\2. 用户打开目标网站时，网站服务器将恶意代码从数据库中取出，然后拼接到html中返回给浏览器中。
+
+\3. 用户浏览器接收到响应后解析执行，那么其中的恶意代码也会被执行。
+
+\4. 那么恶意代码执行后，就能获取到用户数据，比如上面的cookie等信息，那么把该cookie发送到攻击者网站中，那么攻击者拿到该cookie然后会冒充该用户的行为，调用目标网站接口等违法操作。
+
+**如何防范？**
+
+\1. 后端需要对提交的数据进行过滤。
+
+\2. 前端也可以做一下处理方式，比如对script标签，将特殊字符替换成HTML编码这些等。
+
+DOM型XSS的攻击步骤如下：
+
+\1. 攻击者构造出特殊的URL、在其中可能包含恶意代码。
+
+\2. 用户打开带有恶意代码的URL。
+
+\3. 用户浏览器收到响应后解析执行。前端使用js取出url中的恶意代码并执行。
+
+\4. 执行时，恶意代码窃取用户数据并发送到攻击者的网站中，那么攻击者网站拿到这些数据去冒充用户的行为操作。调用目标网站接口执行攻击者一些操作。
+
+**DOM XSS 是基于文档对象模型的XSS。一般有如下DOM操作：**
+
+\1. 使用document.write直接输出数据。
+
+\2. 使用innerHTML直接输出数据。
+
+\3. 使用location、location.href、location.replace、iframe.src、document.referer、window.name等这些。
+
+----
+
+## 3.3 请问什么是CSRF攻击？
+
+CSRF（Cross-site request forgery），中文名称为**跨站请求伪造**，也被称为：one click attack/session riding，缩写为：CSRF/XSRF
+
+在CSRF攻击中攻击者盗用用户的身份，发送恶意请求。CSRF可能造成的危险：冒名发送邮件，发消息，盗取账号，购买商品，虚拟货币转账等等
+
+**CSRF的防御：**
+
+CSRF的防御可以从服务端和客户端两方面着手，防御效果是从服务端着手效果比较好，现在一般的CSRF防御也都在服务端进行。
+
+1、服务端进行CSRF防御
+
+服务端的CSRF方式方法很多样，但总的思想都是一致的，就是在客户端页面增加伪随机数。
+
+- Cookie Hashing
+
+所有表单都包含同一个伪随机值，因为攻击者不能获得第三方的Cookie(理论上)，所以表单中的数据也就构造失败了。
+
+- 验证码
+
+每次的用户提交都需要用户在表单中填写一个图片上的随机字符串，**这个方案可以完全解决CSRF**
+
+- One-Time Tokens(不同的表单包含一个不同的伪随机值)
+
+在实现One-Time Tokens时，需要注意一点：并行会话的兼容。如果用户在一个站点上同时打开了两个不同的表单，CSRF保护措施不应该影响到他对任何表单的提交。考虑一下如果每次表单被装入时站点生成一个伪随机值来覆盖以前的伪随机值将会发生什么情况：用户只能成功地提交他最后打开的表单，因为所有其他的表单都含有非法的伪随机值。必须小心操作以确保CSRF保护措施不会影响选项卡式的浏览或者利用多个浏览器窗口浏览一个站点。
+
+---
+
