--- a/牛客刷题题目/企业前端面试题目.md
+++ b/牛客刷题题目/企业前端面试题目.md
@@ -1,6 +1,6 @@
 -----
 
-字节暑期实习前端一面
+字节暑期实习前端一面   4.26
 
 1.自我介绍
 
@@ -702,6 +702,44 @@ function repeat(fn,n,delay){
 var repeatFunc=repeat(console.log,4,3000);
 
 ```
+
+
+
+----
+
+美团暑期实习一面  5.10
+
+http的方法  option的作用
+
+为什么TCP三次握手
+
+TCP与UDP的区别和使用场景，是在模型的哪一层
+
+Vue  计算属性与监视属性的区别、使用场景
+
+Vue 组件间传数据，父子、兄弟组件
+
+Vue生命周期  请求数据在那一阶段
+
+觉得自己在项目中用得好的技术
+
+有哪些缓存技术，如何确定用的哪一种缓存技术
+
+回流与重绘
+
+输入url的整个执行过程，HTML 与CSS加载过程
+
+CSS为什么放在页面前面
+
+盒模型，如何设置
+
+深浅拷贝，如何实现深拷贝
+
+js数据类型
+
+代码题：解析url参数
+
+
 
 
 
