--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -4507,6 +4507,242 @@ strictMode() // 将报错
 
 ---
 
+## 1.1 请问什么是ES6，它有哪些新特性？
+
+ECMAScript规定了浏览器脚本语言（js）的标准，ES6是一个泛指，包含ES5.1版以后的js的下一代标准，涵盖了ES2015、ES2016、ES2017等，（ES2015/2016/2017是正式名称，特指发布的正式版本语言标准的年份），通常提到的ES6一般指ES2015标准，有时也泛指“下一代js语言”
+
+ES6相对于更加简洁，大幅度提高了开发效率，主要新增了以下特性：
+
+（1）let声明变量、const声明常量
+
+（2）箭头函数
+
+（3）解构赋值变量（数组、变量）
+
+```js
+let [a, b, c] = [1, 2, 3];
+let[a,[[b], c]]=[1,[[2],3]]; //a：1 b：2 c：3
+```
+
+（4）Set、Map数据结构
+
+（5）Symbol数据类型
+
+（6）Promise对象
+
+（7）async、await
+
+（8）class类
+
+（9）ES 模块化（Moudule）
+
+（10）函数默认参数
+
+（11）函数的rest参数（...变量名），用于获取函数的多余参数，就不需要用arguments对象
+
+```js
+function add(...values){
+    let sum = 0;
+    for(var val of values){     
+        sum += val;
+    }
+    return sum;
+}
+add(2,5,3)  //10
+```
+
+（12）模板字符串
+
+（13）… 展开运算（延展操作符）
+
+（14）元编程Proxy、Reflet
+
+（15）迭代器Iterator 和 for...of 
+
+（16）新增了一些Object对象方法
+
+----
+
+## 1.2 请问var、let 和 const 有何区别？
+
+**作用域不同**：
+
+var 声明的变量的作用域是当前执行上下文，或者说对于声明在任何函数外的变量来说是全局的
+
+let 、 const 声明的是块级作用域变量，只在它所在的代码块内有效
+
+**变量提升现象**：
+
+var声明的变量会被**提升到作用域顶部**，并初始化为undefined
+
+let、 const 声明的变量**会被提升到顶部，但在声明代码前不能使用**（暂时性死区），会被初始化undefined
+
+**变量/常量**：
+
+var 和 let 声明变量，const 声明只读常量
+
+**暂时性死区**：
+
+var 可以先使用，后声明，值为undefined
+
+let 、const 必须先声明，后使用；**且const必须初始化赋值**
+
+在let、const声明之前就访问对应的变量与常量，会抛出ReferenceError，产生原因：
+
+由let/const声明的变量，当它们包含的词法环境(Lexical Environment)被实例化时会被创建，**但只有在变量的词法绑定(LexicalBinding)已经被求值运算后，才能够被访问**（摘自ES2015语言标准）
+
+简单来说：用let/const声明的变量会先在作用域中被创建出来，但此时还未进行词法绑定，是不能被访问的，会抛出错误。
+
+从在作用域创建变量开始，到变量开始可被访问之间的一段时间，称之为**TDZ(暂时性死区)**
+
+----
+
+### **1、const声明的变量是绝对的不可变吗？**
+
+实际上，不是const变量的值不得改动，**而是变量指向的那个内存地址不得改动**。对于基础类型数据，值保存在变量指向的那个内存地址，等同于常量
+
+对于复合类型数据（主要是对象和数组），变量指向的内存地址，保存的只是一个指针，**const只能保证这个指针是不变的**，至于它指向的数据结构是否变化，是不可控的
+
+---
+
+## 1.3 请问ES6新增的Symbol数据类型有何特点？
+
+为保证每个属性的名字都是独一无二，**从根本上防止属性名冲突**，ES6 引入Symbol数据类型
+
+Symbol是第7种基础数据类型，表示独一无二的值，Symbol 值通过Symbol函数生成，对象的属性名现在可以有两种类型，一种是本来的字符串，另一种就是新增的 Symbol 类型
+
+Symbol 数据类型特点：
+
+（1）、凡属性名属于 Symbol 类型，就是独一无二的，可以保证不会与其他属性名产生冲突
+
+（2）、Symbol数据类型可用 typeof 检测出来，返回“symbol”
+
+（3）、Symbol函数前不能使用 new 操作，会报错，**因为生成的 Symbol 是一个基础类型的值，不是对象**，可理解为它是一种类似于字符串的数据类型
+
+（4）、Symbol函数的参数只表示对当前Symbol值的描述，就算参数相同，Symbol函数的返回值是不相等的
+
+```js
+// 没有参数的情况 
+let s1 =Symbol();
+let s2 =Symbol();  
+s1 === s2 // false  
+// 有参数的情况 
+let s1 =Symbol('foo');
+let s2 =Symbol('foo');  
+s1 === s2 // false
+```
+
+（5）、在Symbol 作为属性名，遍历对象的时，该属性不会出现在for...in、for...of循环中，也不会被Object.keys()、Object.getOwnPropertyNames()、JSON.stringify()遍历返回
+
+但它并不是私有属性，Object.getOwnPropertySymbols()方法，可以获取指定对象的所有 Symbol 属性名。**该方法返回一个数组，成员是当前对象的所有用作属性名的 Symbol 值**
+
+**Reflect.ownKeys()方法**可以返回所有类型的键名，包括常规键名和 Symbol 键名
+
+**常用方法：Symbol.for()：（全局注册）**
+
+接受一个字符串作为参数，随后搜索有没有以该参数作为名称的 Symbol 值。如果有，就返回这个 Symbol 值，否则就新建一个以该字符串为名称的 Symbol 值，**并将其注册到全局，可以实现重新使用同一个 Symbol 值。**
+
+----
+
+## 1.4 请问ES6 class与ES5构造函数有什么联系？（如何用ES5的方式实现class？）
+
+class其实是一个语法糖，使得js的编码更清晰、更人性化、风格更贴合面向对象的思想，为代码编译器、检查器提供方便
+
+js生成新对象的传统方法是通过构造函数定义的，这种写法与传统的面向对象语言差异较大。故ES6引入了class作为对象的生成模板
+
+```js
+//ES5写法
+function Person(name, age) {
+    this.name = name;
+    this.age = age;
+}
+Person.prototype.toString = function() {
+    return'('+ this.name + ','+ this.age + ')';
+}
+var person = new Person('TOM', 20);
+console.log(person);// Person { name: 'Mia', age: 18 }
+
+//ES6写法
+class Person {
+    constructor(name, age) {
+    	this.name = name;
+    	this.age = age;
+    }
+    toString() {    
+    	return'('+ this.name + ','+ this.age + ')';
+    }
+}
+var person = new Person('TOM', 20);
+console.log(person);// Person { name: 'Mia', age: 18 }
+```
+
+由上述代码可得出：
+
+（1）class类可以看做是**构造函数的另一种写法**
+
+（2）class类的**数据类型就是函数**，typeof Person === 'function'为true
+
+（3）也可以说class的**底层依然是function构造函数**
+
+class类与构造函数区别：
+
+（1）class内部定义的方法都是**不可枚举的**（non-enumerable），ES5中prototype的方法是可枚举的
+
+（2）class**必须使用new调用**，否则会报错
+
+（3）继承：class用extends实现继承
+
+```js
+class Person{
+    constructor(skin,language){
+        this.skin=skin;
+        this.language=language;
+    }
+    say(){         
+        console.log('I am a Person')
+    }
+}
+```
+
+**（1）子类没有constructor时**
+
+```js
+class American extends Person{
+    aboutMe(){         
+        console.log(this.skin+' '+this.language)
+    }
+}
+```
+
+子类American继承父类Person，子类没有定义constrcutor，**则会默认添加一个**，并且在constrcutor中调用super函数，相当于调用父类的构造函数。**调用super函数是为了在子类中获得父类的this，调用之后this指向子类**，也就是父类.prototype.constructor.call(this)
+
+**（2）子类有constructor**
+
+```js
+class Chinese extends Person{
+    constructor(skin,language,positon){
+        //console.log(this);//在没有调用super之前输出this会报错
+        super(skin,language);
+        //super();//不给父类构造函数传参，父类的构造数的值为undefined       
+        console.log(this);
+        this.positon=positon;
+    }
+    aboutMe(){         
+        console.log(this.x+' '+this.y+' '+this.positon);
+    }
+}
+```
+
+子类必须在constructor方法中调用super方法，否则new实例时会报错。因为子类没有自己的this对象，而是继承父类的this对象。如果不调用super函数，子类就得不到this对象。super()作为父类的构造函数，只能出现在子类的constructor()中；但是super指向父类的原型对象，可以调用父类的属性和方法
+
+
+
+
+
+
+
+----
+
 ## 2.6 请说说你对Promise的理解？
 
 **Promise三个优点：**
@@ -5062,13 +5298,506 @@ Reflect.ownKeys(exam) // ["name", Symbol(age)]
 
 ---
 
-s
+
 
 ----
 
 # DOM事件相关
 
 ---
+
+## 1.1 请问什么是同源策略？
+
+源：就是协议、域名和端口号
+
+同源策略：SOP（Same origin policy）是由Netscape公司1995年引入浏览器的一种约定，是浏览器最核心、最基本的安全功能，若缺少了同源策略，浏览器很容易受到XSS、CSFR等攻击。所谓同源是指"协议+域名+端口"三者相同，若两个URL的协议、域名、端口号都相同，则两者为同源，有一个不同则非同源，即便两个不同的域名指向同一个ip地址，也是非同源的
+
+非同源的URL在没有明确授权的情况下，不能读写对方资源（不能相互通信）
+
+同源策略将限制以下几种行为：
+
+（1）Cookie、LocalStorage 和 IndexDB 无法读取
+
+（2）DOM 和 Js对象无法获得
+
+（3）AJAX 请求不能发送
+
+以下两种不受同源策略的限制：
+
+（1）页面中的链接，重定向以及表单提交是不会受到同源策略限制
+
+（2）跨域资源的引入，但是js不能读写加载的内容，如嵌入到页面中的<script src="..."></script>，<img>，<link>，<iframe>等
+
+注意：
+
+同源策略是浏览器做的限制，对服务器与服务器之间的通信不做限制
+
+当A与B非同源时，从域名A下的一个页面获取域名B下的一个资源，是不被浏览器允许的， 浏览器还是会发出这个请求，但是它会拦截响应内容（因为非同源，不安全）（请求是页面发出的，页面在浏览器中显示，故发出的请求是通过浏览器代为执行）
+
+----
+
+## 1.2 请问什么是跨域？有哪些常用的跨域方式？
+
+受浏览器同源策略的限制，非同源的两个URL间不能通信，非同源的脚本不能操作其他源下面的对象，但在实际开发场景中， 这种情况经常出现， 此时需要通过跨域进行非同源通信
+
+常见跨域解决方式：
+
+（1）通过jsonp跨域
+
+注意：jsonp和json并没有什么关系
+
+原理：利用<script>标签进行跨域 只能实现GET请求
+
+举例：a.com/jsonp.html想得到b.com/main.js中的数据
+
+在a.com的jsonp.html里创建一个回调函数，动态添加<script>元素，向服务器发送请求，请求地址后面加上查询字符串，通过callback参数指定回调函数的名字，请求地址为：http://b.com/main.js?callback=xxx，在main.js中调用这个回调函数xxx，并且以JSON数据形式作为参数传递，完成回调，我们来看看代码：
+
+```js
+function addScriptTag(src) { 
+    var script = document.createElement('script');
+    script.setAttribute("type","text/javascript");  
+    script.src = src;   
+    document.body.appendChild(script); 
+}  
+window.onload = function () {
+    addScriptTag('http://b.com/main.js?callback=foo');
+}  //window.onload是为了让页面加载完成后再执行
+function foo(data) {
+    console.log(data.name+"欢迎您"); 
+};
+```
+
+
+
+**（2）nginx反向代理跨域**
+
+**原理：** 同源策略是浏览器的安全策略，不是HTTP协议的一部分，服务器端调用HTTP接口只是使用HTTP协议，不会执行JS脚本，不需要同源策略，也就不存在跨越问题。
+
+**实现：**通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录
+
+**（3） 跨域资源共享（CORS）**
+
+**普通跨域请求：**只服务端设置Access-Control-Allow-Origin即可，前端无须设置
+
+**带cookie请求**：前后端都需要设置。
+
+```js
+// 前端设置是否带cookie 
+xhr.withCredentials = true
+```
+
+注意：由于同源策略的限制，所读取的cookie为跨域请求接口所在域的cookie，而非当前页
+
+**（4）WebSocket协议跨域**
+
+WebSocket 是HTML5一种新的协议，实现了浏览器与服务器全双工通信，同时允许跨域通讯，是server push技术的一种很好的实现（具体原理分析详见第三章-1.1-延伸考点4）
+
+**（5）document.domain + iframe跨域**
+
+**注意：**仅限主域相同，子域不同的跨域应用场景
+
+**原理：**两个页面都通过js强制设置document.domain为基础主域，就实现了同域
+
+**（6）location.hash + iframe**
+
+**原理：** a与b跨域相互通信，通过中间页c来实现， 三个页面，不同域之间利用iframe的location.hash传值，相同域之间直接js访问来通信
+
+**A域：**a.html -> B域：b.html -> A域：c.html
+
+a与b不同域只能通过hash值单向通信，b与c也不同域也只能单向通信，但c与a同域，所以c可通过parent.parent访问a页面所有对象
+
+```js
+//a.html
+<iframe id="iframe" src="http://www.domain2.com/b.html" style="display:none;"></iframe>
+<script>
+    var iframe = document.getElementById('iframe');
+
+    // 向b.html传hash值
+    setTimeout(function() {
+        iframe.src = iframe.src + '#user=admin';
+    }, 1000);
+
+    // 开放给同域c.html的回调方法
+    function onCallback(res) {
+        alert('data from c.html ---> ' + res);
+    }
+</script>
+//b.html
+<iframe id="iframe" src="http://www.domain1.com/c.html" style="display:none;"></iframe>
+<script>
+    var iframe = document.getElementById('iframe');
+    // 监听a.html传来的hash值，再传给c.html
+    window.onhashchange = function () {
+        iframe.src = iframe.src + location.hash;
+    };
+</script>
+//c.html
+<script>
+    // 监听b.html传来的hash值
+    window.onhashchange = function () {
+        // 再通过操作同域a.html的js回调，将结果传回
+        window.parent.parent.onCallback('hello: ' + location.hash.replace('#user=', ''));
+    };
+</script>
+```
+
+**（7）window.name + iframe跨域**
+
+window.name属性的独特之处：name值在不同的页面（甚至不同域名）加载后依旧存在，并且可以支持非常长的 name 值（2MB）
+
+通过iframe的src属性由外域转向本地域，跨域数据即由iframe的window.name从外域传递到本地域，可以巧妙地绕过了浏览器的跨域访问限制，同时又是安全操作
+
+**（8）postMessage跨域**
+
+postMessage是HTML5 XMLHttpRequest Level 2中的API，且是为数不多可以跨域操作的window属性之一，它可解决以下问题：
+
+a.页面和其打开的新窗口的数据传递
+
+b.多窗口之间消息传递
+
+c.页面与嵌套的iframe消息传递
+
+d.上面三个场景的跨域数据传递
+
+用法：postMessage(data，origi)
+
+data：html5规范支持任意基本类型或可复制的对象，但部分浏览器只支持字符串，所以传参时最好用JSON.stringify()序列化
+
+origin：协议+主机+端口号，也可以设置为"*"，表示可以传递给任意窗口，如果要指定和当前窗口同源的话设置为"/"
+
+例如：从a.html (http://www.domain1.com/a.html) ->        b.html(http://www.domain2.com/b.html) 
+
+```html
+//a.html
+<iframe id="iframe" src="http://www.domain2.com/b.html" style="display:none;"></iframe>
+<script>       
+    var iframe = document.getElementById('iframe');
+    iframe.onload = function() {
+        var data = {
+            name: 'aym'
+        };
+        iframe.contentWindow.postMessage(JSON.stringify(data), 'http://www.domain2.com');   // 向domain2传送跨域数据
+    };
+    window.addEventListener('message', function(e) {
+        alert('data from domain2 ---> ' + e.data);
+    }, false);     // 接受domain2返回数据
+</script>
+//b.html
+<script>
+    window.addEventListener('message', function(e) {             alert('data from domain1 ---> ' + e.data);  //接收domain1的数据 
+    var data = JSON.parse(e.data);         
+    if (data) {             
+    data.number = 16;             
+    window.parent.postMessage(JSON.stringify(data), 'http://www.domain1.com');     // 处理后再发回domain1
+    }     
+}, false);
+ </script>
+```
+
+----
+
+## 1.3 请问你了解浏览器的渲染机制？
+
+首先，浏览器的渲染机制中有几个基本概念名称：
+
+（1）、DOM：浏览器将HTML解析成树形的数据结构
+
+（2）、CSSOM：浏览器将CSS解析成树形的数据结构
+
+（3）、Render Tree：DOM和CSSOM合并后生成Render Tree（渲染树）
+
+（4）、Layout：计算出Render Tree每个节点的具***置
+
+（5）、Painting：通过显卡，将Layout后的节点内容分别呈现到屏幕上
+
+浏览器整个渲染流程如下：
+
+（1）、用户输入一个URL后，浏览器就会向服务器发出一个请求，请求URL对应的资源
+
+（2）、接到服务器的响应内容后，浏览器的HTML解析器，会将HTML文件解析成一颗DOM树，DOM树的构建是一个深度遍历的过程，当前节点的所有子节点都构建完成后，才会去构建当前节点的下一个兄弟节点
+
+（3）、将CSS解析成CSSOM树
+
+（4）、根据DOM树与CSSOM树，构建Render Tree
+
+（5）、浏览器会根据Render Tree能知道网页中哪些有节点，各个节点的CSS，以及各个节点的从属关系
+
+（6）、计算出每个节点在屏幕中的位置后，最后一步就是Painting，根据计算出的规则，把内容画到屏幕上
+
+![img](https://uploadfiles.nowcoder.com/images/20211008/897353_1633683890278/9F4F2AB266BD95CA60C23F32300F594A)
+
+注意：
+
+浏览器在获得HTML文件后，是自上而下的加载，并在加载过程中进行解析与渲染
+
+加载过程中：
+
+遇到外部CSS文件和图片等静态资源时，浏览器会另外发送一个异步请求
+
+遇到js文件时，HTML文件会挂起渲染的进程，等待js文件加载完毕后，再继续进行渲染，因为js可能会修改DOM，导致后续HTML资源白白加载，这也是为什么建议将js文件写在底部body标签前
+
+----
+
+## 1.4 请问如何解决浏览器加载js时的阻塞问题吗？
+
+**（1）、推迟加载**
+
+若页面初始的渲染并不依赖于js或CSS可以用推迟加载，最后在加载js和CSS，把引用外部文件的代码写在最后
+
+**（2）、defer延迟加载**
+
+```html
+<script src="" defer></script>
+```
+
+在文档解析完成开始执行，并且在DOMContentLoaded事件之前执行完成，会按照在文档出现的顺序去下载解析，效果和把script放在文档最后</body>之前是一样
+
+​    注意：defer最好用在引用外部文件中使用，用了defer不要使用document.write()方法，使用defer时最好不要请求样式信息，因为样式表可能尚未加载，浏览器会禁止该脚本等待样式表加载完成，相当于样式表阻塞脚本执行
+
+**（3）、异步加载**
+
+async异步加载：就是告诉浏览器不必等到加载完外部文件，可以边渲染边下载，什么时候下载完成什么时候执行
+
+
+
+```html
+ <script type="text/javascript" src="a.js" async></script>
+```
+
+**script dom element：**用js动态创建一个script元素添加在document中
+
+注意：会阻止onload事件
+
+```html
+<script type="text/javascript">
+    (function() {
+     var s = document.createElement('script');
+     s.type = 'text/javascript';
+     s.async = true;                   //这句可以删除，但是效果不变。
+     s.src = 'js/a.js';
+     var x = document.getElementsByTagName('script')[0];
+     x.parentNode.insertBefore(s, x);
+ })();
+</script>
+```
+
+**onload时异步加载：**与script dom element法差不多，但不是同时执行js和html，是等html的文件、图片之类的、页面所有的资源全部加载完成后再下载执行js，这样的方法可以避免阻塞onload事件的触发
+
+**注意：**DOMContentLoaded与onload事件不同，DOMContentLoaded是页面解析完成，页面的dom元素可以使用，但是页面的图片、视频等资源可能还没加载完成
+
+----
+
+## 1.5 请问你了解什么是重绘？什么是回流？两者有何区别？
+
+【考点映射】
+
+- 重绘、回流、两者区别
+
+【频率】★★★★★
+
+【难度】☆
+
+【参考答案】
+
+**重绘：**
+
+更换某个元素颜色，这样的行为是不影响页面布局，DOM树不会变化，但颜色变了，使该元素所在的 Layer 重新渲染
+
+常见情况：
+
+（1）、回流必定引发重绘，但重绘也会单独触发
+
+（2）、背景色、颜色、字体改变（字体大小改变，会触发回流）
+
+**回流：**
+
+增删DOM节点，或修改一个元素的宽高，页面布局发生变化，DOM树结构发生变化，需要重新构建DOM树，而DOM树与渲染树是紧密相连的，DOM树构建完，渲染树也会随之对页面进行再次渲染
+
+**常见情况：**
+
+（1）、页面渲染初始化
+
+（2）、DOM树变化（添加或者删除可见的DOM元素、元素位置改变）
+
+（3）、Render树变化（元素尺寸改变：边距、填充、边框、宽度和高度）
+
+（4）、浏览器窗口尺寸改变，resize事件发生
+
+（5）、内容改变：文本改变或者图片大小改变而引起的计算值宽度和高度改变；
+
+（6）、查询布局信息，包括offestLeft/Top/Width/Height、scrollLeft/Top/Width/Height、clientLeft/Top/Width/Height、浏览为了返回最新值，会触发回流
+
+-----
+
+## 2.1 请问在浏览器中输入 URL后，浏览器会做哪些工作？
+
+【考点映射】
+
+- 浏览器整个渲染过程
+
+【频率】★★★★★
+
+【难度】☆☆
+
+【参考答案】
+
+从输入URL到渲染出整个页面包括三个部分：
+
+**（1）、DNS解析URL**
+
+DNS解析就是寻找哪个服务器上有请求的资源，因为ip地址不易记忆，一般会使用URL域名（如[www.baidu.com](http://www.baidu.com/)）作为网址，DNS解析就是将域名“翻译”成IP地址
+
+具体过程：
+
+a、浏览器缓存：浏览器会按照一定的频率，缓存DNS记录
+
+b、操作系统缓存：如果浏览器缓存中找不到需要的DNS记录，就会取操作系统中找
+
+c、路由缓存：路由器也有DNS缓存
+
+d、ISP的DNS服务器：ISP有专门的DNS服务器应对DNS查询请求
+
+e、根服务器：ISP的DNS服务器找不到，就要向根服务器发出请求，进行递归查询
+
+**（2）、浏览器发送请求与服务器交互**
+
+a、浏览器利用tcp协议通过三次握手与服务器建立连接
+
+http请求包括header和body，header中包括请求的方式（get和post）、请求的协议 （http、https、ftp）、请求的地址ip、缓存cookie，body中有请求的内容
+
+b、浏览器根据解析到的IP地址和端口号发起http的get请求
+
+c、服务器接收到http请求之后，开始搜索html页面，并使用http返回响应报文
+
+d、若状态码为200显示响应成功，浏览器接收到返回的HTML页面后，开始渲染页面
+
+**（3）、浏览器对接收到的HTML页面进行渲染**
+
+a、浏览器根据深度遍历的方式把HTML节点遍历成DOM树
+
+b、将CSS解析成CSSOM树
+
+c、将DOM树和CSSOM树构造成Render树
+
+d、根据Render树计算所有节点在屏幕中的位置，进行布局（回流）
+
+e、遍历Render树并调用硬件API绘制所有节点（重绘）
+
+---
+
+## 2.2 请问你了解浏览器缓存吗？
+
+缓存可以重复利用文件，降低网络负荷，提高网页打开速度，提升用户体验
+
+缓存分类：
+
+从宏观上分为私有缓存和共享缓存，共享缓存就是那些能被各级代理缓存的缓存，私有缓存就是用户专享的，各级代理不能缓存
+
+从微观上可以分为以下几类：
+
+a、浏览器缓存
+
+b、代理服务器缓存
+
+c、CDN缓存
+
+d、数据库缓存
+
+e、应用层缓存
+
+主要对浏览器的缓存进行分析：
+
+![img](https://uploadfiles.nowcoder.com/compress/mw1000/images/20211008/897353_1633685850116/826C8F1D891122B9999FE81E1D55CA33)
+
+**（1）、HTTP缓存：主要分为强缓存与协商缓存**
+
+- 强缓存
+
+强可理解为强制的意思，当浏览器去请求某个文件的时候，服务端就在respone header里面对该文件做了缓存配置。缓存的时间、缓存类型都由服务端控制，具体由 respone header 的cache-control 控制，常见的设置是max-age public private no-cache no-store等，各类设置对应情况：
+
+a、cache-control: max-age=xxxx，public
+
+客户端和代理服务器都可以缓存该资源，客户端在xxx秒的有效期内，如果有请求该资源的需求的话就直接读取缓存，statu code200 ，如果用户做了刷新操作，就向服务器发起http请求
+
+b、cache-control: max-age=xxxx，private
+
+只让客户端可以缓存该资源；代理服务器不缓存，客户端在xxx秒内直接读取缓存，statu code:200
+
+c、cache-control: max-age=xxxx，immutable
+
+客户端在xxx秒的有效期内，如果有请求该资源的需求的话就直接读取缓存，statu code:200 ，即使用户做了刷新操作，也不向服务器发起http请求
+
+d、cache-control: no-cache
+
+跳过设置强缓存，但不妨碍设置协商缓存；通常做了强缓存，只有强缓存失效了才走协商缓存的，设置了no-cache就不会走强缓存了，每次请求都回询问服务端
+
+e、cache-control: no-store
+
+不缓存，客户端、服务器都不缓存
+
+- 协商缓存
+
+可理解为强缓存就是为资源设置一个有效时间，每次请求资源时都会检查是否过期，只有过期才会去请求服务器（可有效减少请求次数），当强制缓存失效后，浏览器携带缓存标识向服务器发起请求，由服务器根据缓存标识决定是否使用缓存的过程协商缓存生效，返回304和Not Modified
+
+在 response header里面的设置etag、last-modified
+
+etag：每个文件具有唯一一个“标识”
+
+last-modified：文件的修改时间，精确到秒
+
+每次请求返回携带response header中的etag和last-modified，在下次请求时request header也会带上，服务端对比etag标识，判断资源是否更改，如更改直接返回新的资源，并更新response header的etag、last-modified，如资源不变，etag、last-modified不变，对客户端来说，每次请求都进行了协商缓存，即：
+
+发请求-->资源是否过期？-->过期（没过期为强缓存）-->请求服务器-->服务器对比资源是否真的过期？-->没过期-->返回304状态码-->客户端用缓存的老资源
+
+当服务端发现资源过期时：
+
+服务器对比资源是否真的过期-？->过期-->返回200状态码-->客户端像第一次接收该资源一样，记录cache-control中的max-age、etag、last-modified等信息
+
+**（2）、本地存储**
+
+主要有：localStorage，sessionStorage和cookie，WebSql和IndexDB主要用在前端有大容量存储需求的页面上，如在线编辑浏览器或者网页邮箱，可以将数据存储在浏览器，应该根据不同的场景进行使用
+
+- Cookie
+
+由服务器生成，且前端也可设置，保存在客户端本地的一个文件，通过response header的set-Cookie字段进行设置，且Cookie的内容自动在请求的时候被传递给服务器
+
+其中包含的信息：
+
+a、用户ID、密码、浏览过的网页、停留的时间等信息，当该用户再打开该网站时，网站通过读取Cookie，就可以做出相应的动作，如身份校验、提示语等
+
+b、还保存host属性，即网站的域名或ip，一个网站只能读取它自己放置的信息，不能读取其他网站的Cookie文件
+
+Cookie 优点：给用户更人性化的使用体验，如自动登陆、提示语；弥补了HTTP无连接特性；可作为站点统计访问量依据
+
+Cookie 缺点：无法解决多人共用电脑问题，具有安全隐患；Cookie文件容易被误删除；可人为修改host文件，可以非法访问目标站点的Cookie；容量较小，不能超过4kb；直接在response header上带数据安全性差
+
+- LocalStorage（本地存储）
+
+主要是开发人员在前端设置，一旦数据保存在本地后，就可避免再向服务器请求数据，从而减少不必要的数据请求，可以长期存储数据，没有时间限，遵循同源策略，不同的网站不能直接共用
+
+一般浏览器localStorage支持的是5M大小，不同的浏览器会略有不同
+
+LocalStorage 优点：拓展了Cookie的4k限制；可以将第一次请求的5M大小数据直接存储到本地，相比于Cookie节约带宽
+
+LocalStorage 缺点：需要手动删除，否则长期存在；浏览器大小不一，版本的支持也不一样；只支持string类型的存储，JSON对象需要转换；本质上是对字符串的读取，存储内容过多会消耗内存空间，导致卡顿
+
+- SessionStorage（会话存储）
+
+同样是开发人员在前端设置，用于临时保存同一窗口(或标签页)的数据，在关闭窗口或标签页之后将会删除这些数据，大多数浏览器限制为5MB
+
+- WebSQL
+
+WebSQL 是在浏览器上模拟数据库，可以使用JS来操作SQL进行数据读写，使用 SQL 来操纵客户端数据库的 API（异步），现阶段使用较少
+
+- IndexedDB
+
+随浏览器的功能日益强大，越来越多的网站将大量数据储存在客户端，可减少从服务器获取数据，直接从本地获取数据
+
+现有浏览器数据储存方案，都不适用于储存大量数据：Cookie 大小不超过4KB，且每次请求都会发送回服务器；LocalStorage 大小在2.5MB 到 10MB 之间（各家浏览器不同），且不提供搜索功能，不能建立自定义的索引。
+
+IndexedDB 是浏览器提供的本地数据库，可被网页脚本创建和操作。IndexedDB 允许储存大量数据，提供查找接口，还能建立索引。但IndexedDB 不属于关系型数据库（不支持 SQL 查询语句），更接近 NoSQL 数据库
+
+----
 
 
 
