--- a/牛客刷题题目/前端岗面试高频题.md
+++ b/牛客刷题题目/前端岗面试高频题.md
@@ -4883,7 +4883,374 @@ import 'lodash' //仅仅执行lodash模块，但是不输入任何值
 
 ## 2.1 请说说ES6新增了哪些对象方法？
 
+**（1）Object.is()**
 
+ES5中用 == 和 === 比较两个值是否相等，两者都有缺陷，== 会自动转换数据类型，=== NaN不等于自身，以及 +0 等于 -0。ES6 提出“Same-value equality”（同值相等）算法，即在所有环境中，只要两个值是一样的，则相等，Object.is()就是实现这个算法的新方法，用来比较两个值是否严格相等（除了两个特例，基本与 === 一致）
+
+```js
+Object.is('foo','foo') // true 
+Object.is({},{}) // false
+
+//与===的不同之处
+Object.is(+0,-0) // false 
+Object.is(NaN,NaN) // true
+
+console.log(+0 === -0);  //  true
+console.log(NaN === NaN);  //  false
+```
+
+**（2）Object.assign()**
+
+用于对象的合并，将源对象（source）的所有可枚举属性，复制到目标对象（target）
+
+常见用途：为对象添加属性、方法，克隆对象，合并多个对象，为属性指定默认值
+
+```js
+const target ={a:1};  
+const source1 ={b:2}; 
+const source2 ={c:3};  
+
+Object.assign(target, source1, source2); 
+console.log(target); // {a:1, b:2, c:3}
+```
+
+注意：
+
+- Object.assign()方法是**浅拷贝**，而不是深拷贝，若源对象某个属性的值是对象，那么目标对象拷贝得到的是这个对象的引用
+- Object.assign()拷贝的属性是有限制的，**只拷贝源对象的自身属性**，不拷贝继承属性，不拷贝不可枚举属性
+- 一旦遇到同名属性时，会直接替换，后面的属性会覆盖前面的属性
+- 若**参数不是对象，则会先转成对象**；由于undefined和null无法转成对象，若它们作为参数，就会报错  
+
+**（3）`__proto__`属性：**本质上是一个内部属性，而不是一个正式的对外的 API，若一个对象本身部署了`__proto__`属性，该属性的值就是对象的原型，实际上是调用了Object.prototype.`__proto__`
+
+**（4）Object.setPrototypeOf()：**功能与`__proto__`相同，用于设置一个对象的原型对象，相较于`__proto__`是ES6推荐的方法
+
+**（5）Object.getPrototypeOf() ：**用于读取一个对象的原型对象
+
+**（6）Object.keys()：**遍历对象自身（不含继承的）所有可遍历属性的键名，以数组的方式返回
+
+**（7）Object.values()：**遍历对象自身（不含继承的）所有可遍历属性的值，以数组的方式返回
+
+**（8）Object.entries() ：**遍历对象自身（不含继承的）所有可遍历属性的健值对，以数组的方式返回（只输出属性名非 Symbol 值的属性）
+
+```js
+var obj ={ foo:'bar', baz:42}
+Object.keys(obj) // ["foo", "baz"]
+Object.values(obj) // ["bar", 42]
+Object.entries(obj) // [ ["foo", "bar"], ["baz", 42] ]
+```
+
+**（9）Object.fromEntries()：**将一个键值对数组转为对象，Object.entries()逆操作
+
+```js
+Object.fromEntries([['foo','bar'],['baz',42]]) // { foo: "bar", baz: 42 }
+```
+
+**（10）Object.getOwnPropertyDescriptors()：**用来获取一个对象的所有自身属性的描述符，返回一个对象，所有原来的对象的属性名都是该对象的属性名，对应的属性值就是该属性的描述对象
+
+```js
+const obj = {
+  foo: 123,
+  get bar() { return 'abc' }
+};
+Object.getOwnPropertyDescriptors(obj)
+// { foo:
+//    { value: 123,
+//      writable: true,
+//      enumerable: true,
+//      configurable: true },
+//   bar:
+//    { get: [Function: bar],
+//      set: undefined,
+//      enumerable: true,
+//      configurable: true } }
+```
+
+---
+
+## 2.2 请说说ES6新增了哪些数组方法？
+
+**（1）扩展运算符**
+
+扩展运算符：...，将一个数组转为用逗号分隔的参数序列，该运算符主要用于函数调用
+
+```js
+console.log(...[1,2,3]) // 1 2 3  
+console.log(1,...[2,3,4],5) // 1 2 3 4 5 
+```
+
+**（2）Array.from（）**
+
+用于将两类对象转为真正的数组：类似数组的对象（array-like object）和可遍历（iterable）的对象（包括 ES6 新增的数据结构 Set 和 Map）
+
+```js
+let arrayLike ={
+    '0':'a',
+    '1':'b',
+    '2':'c',    
+    length:3
+};
+
+// ES5的写法 
+var arr1 =[].slice.call(arrayLike); // ['a', 'b', 'c']  
+// ES6的写法 
+let arr2 = Array.from(arrayLike); // ['a', 'b', 'c']
+```
+
+**（3）数组实例的find（）和findIndex（）**
+
+Array.prototype.find（）：用于找出第一个符合条件的数组成员，它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为true的成员，返回该成员。如没有符合条件的成员，则返回undefined
+
+```js
+[1,4,-5,10].find((n)=> n <0) // -5
+```
+
+Array.prototype.findIndex（）：与find方法非常类似，返回第一个符合条件的数组成员的位置，如所有成员都不符合条件，则返回-1
+
+```js
+[1,5,10,15].findIndex(function(value, index, arr){
+    return value >9;
+}) // 2
+```
+
+**（4）数组实例的includes（）**
+
+Array.prototype.includes（）：返回一个布尔值，表示某个数组是否包含给定的值，第二个参数表示搜索的起始位置，默认为0，与字符串的includes方法类似
+
+```js
+[1,2,3].includes(2) // true 
+[1,2,3].includes(3,3); // false
+```
+
+---
+
+## 2.3 请问你了解Set、Map数据结构吗？
+
+- **Set**
+
+类似于数组，但**成员的值是唯一的**，没有重复值
+
+最常见应用：去除数组重复值、去除字符串里面的重复字符
+
+```js
+// 去除数组的重复成员 
+[...newSet(array)]
+
+// 去除字符串里面的重复字符
+[...newSet('ababbc')].join('') // "abc"
+```
+
+- **WeakSet**
+
+类似于Set，也是不重复的值的集合，与Set区别：
+
+（1）WeakSet 的成员**只能是对象**，不能是其他类型的值
+
+（2）WeakSet 中的对象都是弱引用，即垃圾回收机制不考虑 WeakSet 对该对象的引用，如果其他对象都不再引用该对象，那垃圾回收机制会自动回收该对象所占用的内存，不考虑该对象还存在于 WeakSet 之中
+
+- **Map**
+
+js对象本质上是键值对的集合（Hash 结构），但是只能用字符串当作键名，**一些非字符串类型的值作为键名前，都会被自动转换为字符串**
+
+Map 正是为解决此问题，它类似于对象，也是键值对的集合，但是键名的范围不限于字符串，**各种类型的值（包括对象）都可以当作键名**
+
+相比Object 结构，Object 是“字符串——值”对应，Map是“值——值”的对应
+
+- **WeakMap**
+
+结构于Map类似，也是用于生成键值对的集合，与Map区别：
+
+（1）**只接受对象作为键名**（null除外），不接受其他类型的值作为键名
+
+（2）WeakMap的键名所指向的对象，不计入垃圾回收机制
+
+---
+
+## 2.4 请你了解ES6中的迭代器与生成器吗？
+
+Iterator迭代器是一种接口，为各种不同的数据结构提供统一的访问机制，任何数据结构只要部署了 Iterator 接口，就可以完成迭代操作（即遍历，依次处理该数据结构的所有成员）
+
+**Iterator 的主要作用：**
+
+（1）为各种数据结构，提供一个统一的、简便的访问接口
+
+（2）使得数据结构的成员能够按某种次序排列
+
+（3）当使用for...of循环遍历某种数据结构时，该循环会自动去寻找 Iterator 接口
+
+**常见默认调用 Iterator 场景：**
+
+for...of循环、解构赋值、扩展运算（...）、yield*
+
+遍历数组也会调用遍历器接口，**任何接受数组作为参数的地方，几乎都调用了遍历器接口**，如Array.from()、Map()、Set()等
+
+
+
+**Generator生成器**是一种异步编程解决方案，Generator 是一个状态机，封装了多个内部状态；它是一个迭代器对象生成函数，
+
+执行 Generator 函数会返回一个迭代器对象，也就是说，Generator 函数除了状态机，还是一个遍历器对象生成函数。返回的迭代器对象，可以依次遍历 Generator 函数内部的每一个状态。
+
+Generator 对比普通函数，外观上有两个主要特征：function关键字与函数名之间有一个星号，函数体内部使用yield表达式，定义不同的内部状态
+
+```js
+function* helloWorldGenerator(){   
+    yield 'hello';    //yield表达式
+    yield 'world';    //yield表达式
+    return'ending';
+}
+
+var hw = helloWorldGenerator();
+```
+
+代码块定义了一个 Generator 函数：helloWorldGenerator，它内部有两个yield表达式，有三个状态：hello，world 和 return 语句（结束执行）
+
+不同于普通函数，调用 **Generator 函数后不执行**，返回的不是函数运行结果，**而返回一个指向内部状态的指针对象**（迭代器对象）
+
+且必须调用遍历器对象的**next方法**，使得指针移向下一个状态。可理解为：每次调用next方法，内部指针就从函数头部或上一次停下来的地方开始执行，直到遇到下一个yield表达式（或return语句）为止。Generator 函数是分段执行的，**yield表达式是暂停执行的标记**，而**next方法可以恢复执行**。
+
+---
+
+## 2.5 请问箭头函数与普通函数有哪些区别？
+
+在外观上， 箭头函数省去了function关键字，使用“箭头”=>定义函数，使表达更加简洁，
+
+```js
+// 箭头函数写法 
+var f = v => v; 
+// 正常函数写法 
+var f = function(v){
+    return v;
+};
+
+// 箭头函数写法 
+var f =() => 5; 
+// 正常函数写法 
+var f = function(){
+    return 5
+};
+
+// 箭头函数写法 
+var sum =(num1, num2)=> num1 + num2; 
+// 正常函数写法 
+var sum = function( num1, num2 ){
+    return num1 + num2;
+};
+```
+
+箭头函数很大程度简化了回调函数
+
+```js
+// 正常函数写法 
+[1,2,3].map(function(x){
+    return x * x;
+}); 
+
+// 箭头函数写法 
+[1,2,3].map(x => x * x);
+```
+
+注意：
+
+（1）箭头函数不会创建自己的this，**只会从自己的作用域链的上一层继承this**
+
+（2）箭头函数的**this是定义时所在的对象**，不是使用时所在的对象
+
+（3）箭头函数的**this指向是固定的**
+
+（4）不能做构造函数，不可使用new命令，会报错
+
+（5）箭头函数是**没有原型，没有prototype属性**，故不可使用new
+
+（6）没有自己的arguments对象，**箭头函数中访问arguments实际上是外层局部（函数）执行环境中的值**
+
+（7）**不可使用yield命令**，不能用作Generator 函数
+
+一起看两道箭头函数的this指向的高频考题：（极有可能出代码题（面试官给代码，答输出））
+
+箭头函数的this指向取决于外层作用域中的this，外层作用域或函数的this指向谁，箭头函数中的this便指向谁；且一旦箭头函数的this绑定成功，也无法被再次修改，类似于硬绑定
+
+```js
+var a = 'window'
+var obj1 = {
+    a: 1,
+    fn1: function () {
+            return () => console.log(this.a)
+    }
+}
+var obj2 = {
+    a: 2
+};
+
+obj1.fn1()(); // 1
+obj1.fn1().call(obj2); // 1 
+
+obj1.fn1.call(obj2)(); // 2
+```
+
+obj1.fn1()()等价于：
+
+```js
+var fn = obj1.fn1(); //fn1的this指向obj1,箭头函数this参考fn1的this
+window.fn();//无法改变箭头函数this
+```
+
+obj1.fn1().call(obj2)等价于：
+
+```js
+var fn = obj1.fn1(); 
+fn.call(obj2);//显式绑定无法改变this
+```
+
+obj1.fn1.call(obj2)()等价于：
+
+```js
+var fn = obj1.fn1.call(obj2);//fn1的this此时指向obj2,箭头函数的this跟着变化
+window.fn();//隐式绑定无法改变箭头函数this
+```
+
+**注意：虽无法直接改变箭头函数this指向，但可以修改外层作用域的this间接修改箭头函数this**
+
+```js
+var name = 'window'  
+function Person(a) {   
+    this.a = a;   
+    this.fn1 = () => console.log(this.a);   
+    this.fn2 = function () {     
+        return () => console.log(this.a);   
+    }; 
+};
+var obj1 = new Person(1); 
+
+var obj2 = new Person(2);  
+
+obj1.fn1(); // 1
+obj1.fn1.call(obj2); // 1
+
+obj1.fn2()(); // 1
+obj1.fn2().call(obj2); // 1
+
+obj1.fn2.call(obj2)(); // 2
+```
+
+obj1.fn1()：构造函数在new的过程中this指向了obj1，于是箭头函数的this也指向obj1
+
+obj1.fn1.call(obj2)等价于：
+
+```js
+var fn = obj1.fn1;//箭头函数this指向obj1 
+fn.call(obj2);//箭头函数this无法改变
+```
+
+obj1.fn2()()：fn2指向obj1，箭头函数this同样指向obj1
+
+obj1.fn2().call(obj2)：箭头函数无法被直接修改
+
+obj1.fn2.call(obj2)()等价于：
+
+```js
+var fn = obj1.fn2.call(obj2);//fn2的this此时指向obj2,箭头函数的this跟着变化
+window.fn();//隐式绑定无法改变箭头函数this
+```
 
 
 
@@ -5289,7 +5656,7 @@ let [foo, bar] = await Promise.all([getFoo(), getBar()]);
 
 Proxy 是 ES6 为了操作对象引入的一个新API，可以对目标对象的读取、函数调用等操作进行拦截，然后进行处理
 
-Proxy不直接操作对象，更像一种代理模式，通过对象的代理对象进行操作，在进行这些操作时，可以添加一些额外操作
+**Proxy不直接操作对象，更像一种代理模式**，通过对象的代理对象进行操作，在进行这些操作时，可以添加一些额外操作
 
 基本用法：
 
@@ -5351,8 +5718,9 @@ let validator = {
                  throw new RangeError('The age seems invalid'); }         
              }         // 对于满足条件的 age 属性以及其他属性，直接保存                     
              obj[prop] = value;     
-             } 
+         } 
  };
+
  let proxy= new Proxy({}, validator) 
  proxy.age = 100; 
  proxy.age           // 100 
@@ -5364,9 +5732,9 @@ let validator = {
 
 ## 3.5 请问什么是Reflect ？
 
-Reflect 同样也是 ES6 为了操作对象引入的一个新API，可以用于获取目标对象的行为，与 Object 类似，但是更易读，它的方法与 Proxy 是对应的
+Reflect 同样也是 ES6 为了操作对象引入的一个新API，可以**用于获取目标对象的行为**，与 Object 类似，但是更易读，它的方法与 Proxy 是对应的
 
-ES6 将Object的一些明显属于语言内部的方法移植到了 Reflect 对象上（现阶段某些方***同时存在于 Object 和 Reflect 对象上）
+ES6 将Object的一些明显属于语言内部的方法移植到了 Reflect 对象上（现阶段某些方法同时存在于 Object 和 Reflect 对象上）
 
 Reflect 对象对某些方法的返回结果进行了修改，使其更合理
 
@@ -5390,7 +5758,8 @@ let receiver = {
     name: "Jerry",     
     age: 20 
 } 
-Reflect.get(exam, 'info', receiver); // Jerry20   
+Reflect.get(exam, 'info', receiver); // Jerry20  
+
 // 当 name 为不存在于target对象的属性时，返回 undefined 
 Reflect.get(exam, 'birth'); // undefined   
 // 当 target 不是对象时，会报错 
@@ -5415,7 +5784,7 @@ exam.age; // 25
 Reflect.set(exam, 'age', ); // true 
 exam.age; // undefined   
 
-// 当target对象中存在name属性setter方法时，setter方法中的this会绑定//receiver, 所以修改的实际上是receiver的属性, 
+// 当target对象中存在name属性setter方法时，setter方法中的this会绑定receiver, 所以修改的实际上是receiver的属性, 
 let receiver = {     
     age: 18 
 } 
@@ -5441,8 +5810,6 @@ Reflect.ownKeys(exam) // ["name", Symbol(age)]
 ----
 
 
-
----
 
 
 
