--- a/牛客刷题题目/前端面试算法题.md
+++ b/牛客刷题题目/前端面试算法题.md
@@ -449,3 +449,56 @@ console.log(threeNumberSum(test));  // [ [ -1, -1, 2 ], [ -1, 0, 1 ] ]
 
 更简略地说，前者（子串）的字符的位置必须连续，后者（子序列LCS）则不必。比如字符串“ acdfg ”同“ akdfc ”的最长公共子串为“ df ”，而它们的最长公共子序列LCS是“ adf ”，LCS可以使用动态规划法解决。
 
+![最大子数组乘积](E:\pogject\学习笔记\image\leetcode\最大子数组乘积.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxProduct = function(nums) {
+    let n=nums.length;
+    const maxF=[...nums];
+    const minF=[...nums];
+    let ans=maxF[0];
+    for (let i=1;i<n;i++){
+        maxF[i]=Math.max(maxF[i-1]*nums[i], Math.max(nums[i],minF[i-1]*nums[i]));
+        ans = ans > maxF[i] ? ans : maxF[i];
+        minF[i]=Math.min(minF[i-1]*nums[i], Math.min(nums[i],maxF[i-1]*nums[i]));
+    }
+    return ans;
+};
+
+let nums=[2,3,-2,4];
+let result=maxProduct(nums);
+console.log(result);
+```
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxProduct = function(nums) {
+    let n=nums.length;
+    let maxF=nums[0];
+    let minF=nums[0];
+    let ans=nums[0];
+    for (let i=1;i<n;i++){
+        let mx=maxF,mn=minF;
+        maxF=Math.max(mx*nums[i], Math.max(nums[i],mn*nums[i]));
+        ans = Math.max(maxF,ans);
+        minF=Math.min(mn*nums[i], Math.min(nums[i],mx*nums[i]));
+    }
+    return ans;
+};
+
+let nums=[2,3,-2,4];
+let result=maxProduct(nums);
+console.log(result);
+```
+
+动态规划求解的方法一个for循环搞定，所以时间复杂度为O(n)。
+
+---
+
