--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3698,7 +3698,7 @@ var postorderTraversal = function(root) {
 };
 ```
 
----
+
 
 
 ---
@@ -3716,11 +3716,56 @@ var postorderTraversal = function(root) {
 -10 <= nums[i] <= 10
 nums 的任何前缀或后缀的乘积都 保证 是一个 32-位 整数
 
+![最大子数组乘积](E:\pogject\学习笔记\image\leetcode\最大子数组乘积.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxProduct = function(nums) {
+    let n=nums.length;
+    const maxF=[...nums];
+    const minF=[...nums];
+    let ans=maxF[0];
+    for (let i=1;i<n;i++){
+        maxF[i]=Math.max(maxF[i-1]*nums[i], Math.max(nums[i],minF[i-1]*nums[i]));
+        ans = ans > maxF[i] ? ans : maxF[i];
+        minF[i]=Math.min(minF[i-1]*nums[i], Math.min(nums[i],maxF[i-1]*nums[i]));
+    }
+    return ans;
+};
+
+let nums=[2,3,-2,4];
+let result=maxProduct(nums);
+console.log(result);
 ```
 
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maxProduct = function(nums) {
+    let n=nums.length;
+    let maxF=nums[0];
+    let minF=nums[0];
+    let ans=nums[0];
+    for (let i=1;i<n;i++){
+        let mx=maxF,mn=minF;
+        maxF=Math.max(mx*nums[i], Math.max(nums[i],mn*nums[i]));
+        ans = Math.max(maxF,ans);
+        minF=Math.min(mn*nums[i], Math.min(nums[i],mx*nums[i]));
+    }
+    return ans;
+};
+
+let nums=[2,3,-2,4];
+let result=maxProduct(nums);
+console.log(result);
 ```
 
-----
+
 
 
 ---
