--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4598,6 +4598,149 @@ console.log(result);  //
 
 
 ---
+## 215. 数组中的第K个最大元素
+
+给定整数数组 nums 和整数 k，请返回数组中第 k 个最大的元素。
+
+请注意，你需要找的是数组排序后的第 k 个最大的元素，而不是第 k 个不同的元素。
+提示：
+
+1 <= k <= nums.length <= 104
+-104 <= nums[i] <= 104
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var findKthLargest = function(nums, k) {
+	nums.sort((a,b)=>b-a);
+	return nums[k-1];
+};
+```
+
+**基于快速排序的选择方法**
+
+![数组中的第K个最大元素_基于快速排序的选择方法](E:\pogject\学习笔记\image\leetcode\数组中的第K个最大元素_基于快速排序的选择方法.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+*/
+var findKthLargest = function(nums, k) {
+    return quickSelect(nums, 0, nums.length - 1, nums.length - k);
+};
+
+
+var quickSelect=(arr, left, right, index)=>{
+    let q = randomPartition(arr, left, right);  //基准
+    if (q === index) {
+        return arr[q];
+    }else{
+        if (q < index) {
+            return quickSelect(arr, q + 1, right, index);
+        }else{
+            return quickSelect(arr, left, q - 1, index);
+        }
+    }
+}
+
+//
+var randomPartition=(arr,left,right)=>{
+    let i = Math.floor(Math.random() * (right - left + 1)) + left;
+    swap(arr, i, right);
+    return partition(arr, left, right);
+}
+
+var partition=(arr, left, right)=>{
+    let datum = arr[right];
+    let i = left - 1;
+    for (let j = left; j < right; j++){
+        if (arr[j] <= datum) {
+            swap(arr ,++i, j);
+        }
+    }
+    swap(arr, i+1, right);
+    return i+1;
+}
+
+//交换元素
+var swap=(arr,i,j)=>{
+    let temp=arr[i];
+    arr[i]=arr[j];
+    arr[j]=temp;
+}
+
+let test=[3,2,3,1,2,4,5,5,6];
+
+console.log(findKthLargest(test,4));  //
+```
+
+**基于堆排序的选择方法**
+
+我们也可以使用堆排序来解决这个问题——建立一个大根堆，做 k - 1 次删除操作后堆顶元素就是我们要找的答案。在很多语言中，都有优先队列或者堆的的容器可以直接使用，但是在面试中，面试官更倾向于让更面试者自己实现一个堆。所以建议读者掌握这里大根堆的实现方法，在这道题中尤其要搞懂「建堆」、「调整」和「删除」的过程。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+*/
+var findKthLargest = function(nums, k) {
+	//从nums中取出前k个数，构建一个小顶锥
+	let heapSize = nums.length;
+	bulidMaxHeap(nums,heapSize);
+	for (let i = nums.length - 1; i >= nums.length - k + 1; i--){
+		swap(nums, 0, i);
+		heapSize--;
+		maxHeapify(nums,0,heapSize);
+	}
+	return nums[0];  //返回堆顶元素
+};
+
+// 原地建堆，从后往前，自上而下式建小顶堆
+var bulidMaxHeap = (arr, heapSize)=>{
+	for (let i=Math.floor(heapSize/2); i >= 0; i--){
+		maxHeapify(arr,i,heapSize);
+	}
+}
+
+//堆化
+var maxHeapify = (arr, i, heapSize)=>{
+	let left = i*2 + 1;
+	let right = i*2 + 2;
+	let largest = i;
+	if (left < heapSize && arr[left] > arr[largest]) {
+		largest = left;
+	}
+	if (right < heapSize && arr[right] > arr[largest]) {
+		largest = right;
+	}
+
+	if (largest !== i) {
+		swap(arr, i, largest);
+		maxHeapify(arr, largest, heapSize);
+	}
+}
+
+//交换元素
+var swap=(arr,i,j)=>{
+	let temp=arr[i];
+	arr[i]=arr[j];
+	arr[j]=temp;
+}
+
+let test=[3,2,3,1,2,4,5,5,6],k=4;
+console.log(findKthLargest(test,k));  //
+```
+
+
+
+---
+
 ## 217. 存在重复元素
 
 给定一个整数数组，判断是否存在重复元素。如果存在一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
