--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9462,6 +9462,10 @@ console.log(result);
 
 
 ---
+
+
+----
+
 ## 564. 寻找最近的回文数
 
 给定一个表示整数的字符串 n ，返回与它最近的回文整数（不包括自身）。如果不止一个，返回较小的那个。
@@ -9927,6 +9931,121 @@ var tree2str = function(root) {
     return ans.join("");
 
 };
+```
+
+---
+
+## 617. 合并二叉树
+
+给你两棵二叉树： root1 和 root2 。
+
+想象一下，当你将其中一棵覆盖到另一棵之上时，两棵树上的一些节点将会重叠（而另一些不会）。你需要将这两棵树合并成一棵新二叉树。合并的规则是：如果两个节点重叠，那么将这两个节点的值相加作为合并后节点的新值；否则，不为 null 的节点将直接作为新二叉树的节点。
+
+返回合并后的二叉树。
+
+注意: 合并过程必须从两个树的根节点开始。
+
+提示：
+
+两棵树中的节点数目在范围 [0, 2000] 内
+-104 <= Node.val <= 104
+
+**深度优先搜索（递归）**
+
+```js
+function TreeNode(val, left, right){
+    this.val = (val === undefined ? 0 : val);
+    this.left = (left === undefined ? null : left);
+    this.right = (right === undefined ? null : right);
+}
+
+/**
+ * @param {TreeNode} root1
+ * @param {TreeNode} root2
+ * @return {TreeNode}
+ */
+
+var mergeTrees = function(root1, root2) {
+    if (root1 == null){
+        return root2;
+    }
+    if (root2 == null) {
+        return root1;
+    }
+    root1.val = root1.val + root2.val;
+    root1.left = mergeTrees(root1.left, root2.left);
+    root1.right = mergeTrees(root1.right, root2.right);
+    return root1;
+};
+
+let nums=[2,7,9,3,1];
+let result=rob(nums);
+console.log(result);
+```
+
+时间复杂度：O(min(m,n))，对两个二叉树同时进行深度优先搜索，只有当两个二叉树中的对应节点都不为空时才会对该节点进行显性合并操作，因此被访问到的节点数不会超过较小的二叉树的节点数。
+
+空间复杂度：O(min(m,n))，空间复杂度取决于递归调用的层数，递归调用的层数不会超过较小的二叉树的最大高度，最坏情况下，二叉树的高度等于节点数。
+
+**广度优先搜索**
+
+```js
+function TreeNode(val, left, right){
+    this.val = (val === undefined ? 0 : val);
+    this.left = (left === undefined ? null : left);
+    this.right = (right === undefined ? null : right);
+}
+
+/**
+ * @param {TreeNode} root1
+ * @param {TreeNode} root2
+ * @return {TreeNode}
+ */
+
+var mergeTrees = function(root1, root2) {
+    if (root1 == null){
+        return root2;
+    }
+    if (root2 == null) {
+        return root1;
+    }
+    const root3 = new TreeNode(root1.val + root2.val);
+    const queue1 = [root1];
+    const queue2 = [root2];
+    const queue3 = [root3];
+
+    while (queue1.length > 0 && queue2.length > 0){
+        let node3 = queue3.pop();
+        let node1 = queue1.pop();
+        let node2 = queue2.pop();
+        if (node1.left !== null || node2.left !== null) {
+            if (node1.left !== null && node2.left !== null) {
+                node3.left = new TreeNode(node1.left.val + node2.left.val);
+                queue1.push(node1.left);
+                queue2.push(node2.left);
+                queue3.push(node3.left);
+            }else if (node1.left !== null){
+                node3.left = node1.left;
+            }else if (node2.left !== null){
+                node3.left = node2.left;
+            }
+        }
+        if (node1.right !== null || node2.right !== null) {
+            if (node1.right !== null && node2.right !== null) {
+                node3.right = new TreeNode(node1.right.val + node2.right.val);
+                queue1.push(node1.right);
+                queue2.push(node2.right);
+                queue3.push(node3.right);
+            }else if (node1.right !== null){
+                node3.right = node1.right;
+            }else if (node2.right !== null){
+                node3.right = node2.right;
+            }
+        }
+    }
+    return root3;
+};
+
 ```
 
 
